--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
   <body>
-    <nav></nav>
+    <nav class="navbar">
+
+    </nav>
     <div class="body"></div>
-    <footer></footer>
+    <footer class="footer">
+        <div class="outer">
+            <div class="div1 font-sans">
+                <div>&copy; 2025 Yashika Soni's Blog</div>
+                <div>
+                    <span class="navigators">Archive</span>
+                    <span>&middot;</span>
+                    <span class="navigators">Privacy policy</span>
+                    <span>&middot;</span>
+                    <span class="navigators">Terms</span>
+                </div>
+            </div>
+            <div class="div2">
+                <img class="star" src="star.svg" alt="--">
+                <img class="star" src="star.svg" alt="--">
+                <img class="star" src="star.svg" alt="--">
+                <img class="star" src="star.svg" alt="--">
+            </div>
+            <div class="div3">
+                <div class="div3a"><i class="fa-brands fa-hashnode"></i></div>
+                <div class="div3b font-sans">Powered by Hashnode - Build your Developer hub</div>
+                <div class="div3c font-sans">
+                    <button class="btn">Start your blog</button>
+                    <button class="btn">Create docs</button>
+                </div>
+            </div>
+
+        </div>
+    </footer>
   </body>
 </html>
