--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+  </head>
+  <body>
+    <nav>
+      <!-- upper section of nav -->
+      <div class="div1">
+        <div class="upper">
+          <div class="left">
+            <div class="username">Umesh Kumar's Blogs</div>
+            <div class="lefticons">
+              <ul>
+                <li><i class="fa-brands fa-x-twitter"></i></li>
+                <li><i class="fa-brands fa-github"></i></li>
+                <li><i class="fa-brands fa-hashnode"></i></li>
+                <li><i class="fa-brands fa-linkedin"></i></li>
+                <li><i class="fa-solid fa-wifi"></i></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="right">
+            <div class="righticons">
+              <ul>
+                <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li><i class="fa-solid fa-moon"></i></li>
+                <li id="profilePic"><i class="fa-solid fa-circle-user"></i></li>
+              </ul>
+            </div>
+            <div class="followmsg">
+              <button id="follow">
+                <i class="fa-solid fa-user-plus"></i>&nbsp;&nbsp;Follow
+              </button>
+              <div class="inbox">
+                <i class="fa-regular fa-envelope"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- menu -->
+        <div class="div2">
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Newsletter</li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="body"></div>
+    <footer></footer>
+  </body>
 </html>
