--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav>
       <!-- upper section of nav -->
-      <div class="div1">
+      <div class="divOne">
         <div class="upper">
           <div class="left">
             <div class="username">Umesh Kumar's Blogs</div>
@@ -48,7 +48,7 @@
         </div>
 
         <!-- menu -->
-        <div class="div2">
+        <div class="divTwo">
           <ul>
             <li>Home</li>
             <li>About</li>
